Fix bug scrollBar ao fazer um dispatch

--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -150,8 +150,6 @@
    }
 }
 
-@media screen and (max-width: 584px) {
-}
 
 @media screen and (max-width: 566px) {
    #left > div > h2 {
